# equity-platform

./: .cursorrules  .gitignore  AGENTS.md  API_REFERENCE.md  ARCHITECTURE_DIAGRAM.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STORAGE.md  DEVELOPMENT_GUIDELINES.md  PROJECT_STRUCTURE.md  README model.md  README.md  README_CONTEXT.md  STORAGE_CONFIGURATION.md  STORAGE_SOLUTION_README.md  TESTING_STRATEGY.md  app.py  app_factors.py  app_sqlite.py  example_storage_config.py  pyproject.toml  requirements.txt  run_demo.sh  setup_project.py
.cursor/rules/: use-pydantic.mdc
data/: market_data.db
data/portfolios/: portfolio_sample.csv  te_portfolio_indu.csv
data/static/: spx_universe.csv
data/time_series/benchmarks/: INDU_Index_weights.parquet  NDX_Index_weights.parquet  SPX_Index_weights.parquet
data/time_series/exposures/: INDU_Index_members.parquet
data/time_series/factors/: INDU_Index_members_beta.parquet  INDU_Index_members_momentum.parquet  INDU_Index_members_size.parquet  INDU_Index_members_value.parquet  NDX_Index_members_beta.parquet  NDX_Index_members_momentum.parquet  NDX_Index_members_size.parquet  (+1 more)
src/: ai_analyst.py  custom_portfolios.py  data_service.py  database_postgres.py  database_sqlite.py  database_sqlite_2.py  db_cli.py  db_integration.py  db_manager.py  db_schema_viz.py  db_test_connection.py  etl_universe_data.py  factor_db_example.py  file_data_integration.py  file_data_manager.py  logger.py  mock_bql.py  portfolio_analysis.py  qBacktest.py  qFactor.py  qOptimization.py  report_generator.py  security_compare.py  storage_backend.py  utils.py
(+7 files in other folders)
