[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "equity-factor-analysis"
version = "0.1.0"
description = "Equity Factor Analysis Platform"
requires-python = ">=3.8"

[tool.pylsp-mypy]
enabled = true

[tool.pyright]
include = ["src", "app_factors.py"]
extraPaths = ["./src"]
pythonPath = "python"
typeCheckingMode = "basic"
useLibraryCodeForTypes = true
